--- a/app/globals.css
+++ b/app/globals.css
@@ -80,11 +80,11 @@
 }
 
 .root {
-  @apply flex min-h-screen w-full flex-col bg-white lg:flex-row;
+  @apply flex min-h-screen w-full flex-col bg-[#f7f7f8] lg:flex-row;
 }
 
 .root-container {
-  @apply mt-16 flex-1 overflow-auto py-8 lg:mt-0 lg:max-h-screen lg:py-10
+  @apply rounded-l-lg mt-16 flex-1 overflow-auto py-8 lg:mt-0 lg:max-h-screen lg:py-10
 }
 
 /* ========================================== TAILWIND STYLES */
@@ -141,6 +141,7 @@
   .p-18-semibold {
     @apply font-semibold text-[18px] leading-[140%];
   }
+
 
   /* 16 */
   .p-16-semibold {
@@ -298,12 +299,13 @@
 
   /* Navbar Component */
   .header {
-    @apply flex-between fixed h-16 w-full border-b-4 border-purple-100 bg-white p-5 lg:hidden;
+    @apply flex-between fixed h-24 w-full bg-[##f7f7f8] p-5 lg:hidden;
   }
 
   .header-nav_elements {
-    @apply mt-8 flex w-full flex-col items-start gap-5;
+    @apply mt-8 flex w-full flex-col items-start gap-5 ;
   }
+  
 
   /* Search Component */
   .search {
@@ -312,28 +314,33 @@
 
   /* Sidebar Component */
   .sidebar {
-    @apply hidden h-screen w-72 bg-white p-5 shadow-md shadow-purple-200/50 lg:flex;
+    @apply hidden h-screen w-72 bg-[#f7f7f8] p-5 lg:flex rounded-l-lg;
   }
 
   .sidebar-logo {
-    @apply flex items-center gap-2 md:py-2;
+    @apply flex items-center gap-2 md:py-2 ;
   }
 
   .sidebar-nav {
-    @apply h-full flex-col justify-between md:flex md:gap-4;
+    @apply h-full flex-col justify-between md:flex md:gap-4 ;
   }
 
   .sidebar-nav_elements {
-    @apply hidden w-full flex-col items-start gap-2 md:flex;
+    @apply hidden w-full flex-col items-start gap-2 md:flex ;
   }
 
   .sidebar-nav_element {
-    @apply flex-center p-16-semibold w-full whitespace-nowrap rounded-full bg-cover  transition-all hover:bg-purple-100 hover:shadow-inner;
+    @apply flex-center p-16-semibold w-full whitespace-nowrap rounded-lg bg-cover transition-all pl-3 pr-[0.9375rem];
   }
 
   .sidebar-link {
     @apply p-16-semibold flex size-full gap-4 p-4;
   }
+  .mobile-sidebar-link {
+    @apply p-16-semibold flex size-full gap-4 p-4;
+  }
+  
+
 
   /* TransformationForm Component */
   .prompt-field {
@@ -372,5 +379,5 @@
 .cl-userButtonOuterIdentifier {
   font-size: 16px;
   font-weight: 600;
-  color: #384262;
+  color: #5e606e;
 }
